# cac

./: .gitignore  LICENSE  cac.cabal  stack.yaml
app/Mp/: score.txt  spawnMp.hs
app/SendMidi/: sm.hs
src/: Cac.hs  Comp.hs
src/Cac/: Search.hs
src/Common/: CommonData.hs  CommonUtil.hs
src/Instruments/: AlterTimes.hs  ApplyTimeMod.hs  Curves.hs  Dynamics.hs  InstrUtils.hs  InstrumentsData.hs  Moog.hs  Piano.hs  Piano_examples.hs  Q.hs  Q2.hs  RunOnce.hs  ShowInstruments.hs  TimeMap.hs  ToMidi.hs  ToUnitTimeMods.hs  Trill.hs  data.txt  exampleConfig.hs  feb.txt  script.hs  script2.hs  script3.hs  spawned.hs  testApplyTimeMod.hs
src/Midi/: Interface.hs  MidiData.hs
src/Score/: ParseMarks.hs  ScoreData.hs  ShowScore.hs  XmlToScore.hs
src/Translation/: TranslationData.hs
src/Util/: Map.hs  Math.hs  RandMonad.hs  Showable.hs  UtilData.hs  script9.hs
src/XmlDoc/: ParseXml.hs  Process.hs  ShowXmlDoc.hs  XmlDocData.hs
